react-portfolio/src/components/Hero/Hero.module.css
@import"../../vars.css";
.container{
    position:relative;
    display: flex;
    align-items:center;
    justify-content:space-between;
    margin-top:49px;
    z-index:1;
}
.content{
    display: flex;
    flex-direction: column;
    align-items:flex-start ;
    color:var(--color-text);
    z-index:1;
}
.tittle{
    font-size: 72px;
    font-weight: 900;
    margin-left: 25px;
    margin-bottom: 33px;
    font-family: var(--font-Roboto);
    background:linear-gradient(
        90deg,
        rgba(255,255,255,1)70%,
        rgba(255,255,255,0) 120%
    );
    
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}
.description{
    margin-left: 25px;
    font-size: 30px;
    font-family: var(--font-Roboto);
    margin-bottom: 52px;
}
.contactBtn{
    text-decoration: none;
    margin-left: 25px;;
    background-color: var(--color-primary);
    color:var(--color-text);
    border-radius: 100px;
    font-size:30px;
    font-weight:600;
    padding: 17px 26px;
    box-shadow: 0 0 4px 0 rgba(0,0,0,0.25);


}
.heroImg{
    width:50%;
    z-index:1;
    animation-name: floating;
    animation-duration: 3s;
    animation-iteration-count: infinite;
    animation-timing-function: ease ease-in-out;
}
/* FOR ANIMATION DETAILS*/
@keyframes floating{
    0%{
        transform:translate(0,0px) ;
    }
    50%{
        transform:translate(0,10px);
    }
    100%{
        transform:translate(0,-0px);
    }
}
.topBlur{
    position:absolute;
    height:50vw;
    width:50vw;
    min-width:350px;
    min-width:350px;
    top:-128px;
    left:-10vw;
    border-radius: 764px;
    background:rgba(25,55,109,0.7);
    filter:blur(100px);
    z-index:0

}
.bottomBlur{
    position:absolute;
    width:70vw;
    height:50vw;
    min-width:350px;
    min-width:250px;
    top: 246px;
    right:-25vw;
    border-radius: 764px;
    background:rgba(25,55,109,0.7);
    filter:blur(100px);
    z-index:0;

}
@media screen and (max-width:830px) {
    .container{
        flex-direction:column-reverse;
    }
    .content{
    align-items:center;
    }
    
}

